# cosmos

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/egm96/: egm96-9287.gdf  egm96-9288.gdf  egm96-9289.gdf
resources/gem4/: gem4-9280.gdf  gem4-9281.gdf  gem4-9282.gdf  gem4.gfc
src/: complex.h  gfc_reader.py  gravity.c  gravity.h  gravity.py  vector.h
src/util/: gravity_compiler.c
test/: __main__.py  gdf.c  gdf_reader.py  main.c  potential44.c  potential44.h  test_gravity.c  test_gravity.h  test_gravity.py
test/python/: potential44.py
test/resources/: constants.txt  test_model.gfc
